kubernetes-monitoring/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: port-http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: port-metrics
      protocol: TCP
      port: 9113
      targetPort: 9113
